Auto play button z-index issue resolved

--- a/src/app/components/player/player.component.css
+++ b/src/app/components/player/player.component.css
@@ -89,6 +89,7 @@
     font-size: 14px;
     float: right;
     margin-right: 10px;
+    z-index: 0 !important;
 }
 .custom-switch span {
     float: left;
